# r0zygisk

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
loader/src/: CMakeLists.txt
loader/src/common/: daemon.cpp
loader/src/include/: daemon.h  hide.h  logging.h
loader/src/injector/: art_method.hpp  entry.cpp  gen_jni_hooks.py  hide.cpp  hook.cpp  jni_hooks.hpp  module.hpp  unmount.cpp  zygisk.hpp
loader/src/native_bridge/: loader.cpp
loader/src/ptracer/: main.cpp  monitor.cpp  ptracer.cpp  utils.hpp
module/: build.gradle.kts
module/src/: customize.sh  module.prop  post-fs-data.sh  r0z-ctl.sh  sepolicy.rule  service.sh
module/src/webroot/: app.js  index.html  styles.css
zygiskd/: Cargo.toml  build.gradle.kts
zygiskd/src/: companion.rs  constants.rs  main.rs  r0zd.rs  zygiskd.rs
zygiskd/src/root_impl/: apatch.rs  kernelsu.rs  mod.rs
